# GraphicsDraw

./: .gitignore  CMakeLists.txt  GraphicsDraw_zh_CN.ts  README.md  graphicsview.cpp  graphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
